<resources>
    <string name="app_name">DemoApp</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">password</string>
    <string name="hint_confirm_password">confirm password</string>
    <string name="label_register">Register</string>
    <string name="label_login">Login</string>
    <string name="USER_NAME">Username</string>
    <string name="PASSWORD">Password</string>
    <string name="FAKESERVER">fakeserver</string>
</resources>
